Clean up job search to use 'expression' instead of a bunch of parameters
expressions are more flexible, but are currently not complete
